added box shadows, hover effects and partners logo carousel

--- a/dorost.html
+++ b/dorost.html
@@ -23,6 +23,9 @@
     <!-- Function used to shrink nav bar removing paddings and adding black background -->
     <!-- Jquery needed -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
 
 </head>
@@ -457,59 +460,67 @@
 
     <!-- sponsors section -->
     <div class="sponsors">
-        <!-- remaining logos of sponsors -->
-    </div>
-    <!-- bottom section -->
-    <!-- bottom section -->
-    <div class="container-fluid bottom-section">
-        <div class="container bottom-nav">
-            <nav>
-                <ul>
-                    <li>MUŽI</li>
-                    <li>DOROST</li>
-                    <li>ŽÁCI</li>
-                    <li>PŘÍPRAVKA</li>
-                    <li>KLUB</li>
-                    <li>KONTAKT</li>
-                </ul>
-            </nav>
-
-            <div class="bottom-divider-line"></div>
-
-            <div class="social-sites">
-                <a href="https://www.facebook.com/TJ-Slavoj-Jesen%C3%ADk-nad-Odrou-111503132289346">
-                    <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
-                </a>
-                <a href="https://www.instagram.com/slavoj_cz/">
-                    <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
-                </a>
-                <i class="fa fa-youtube fa-2x" aria-hidden="true"></i>
-                <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
-            </div>
-
-
-            <div class="comp-info">
-                <i class="fa fa-map-marker"></i>
-                Jeseník nad Odrou 235, 742 33 Jeseník nad Odrou, Česká republika
-                &nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;<strong>IČ:</strong>000000
-                &nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;<strong>DIČ:</strong>000000
-            </div>
-            <div class="contact-info">
-                <div class="phone">
-                    <i class="fa fa-phone"></i>&nbsp;&nbsp;&nbsp;+420 789 456 423
-                </div>
-                <div class="mail">
-                    <i class="fa fa-envelope-o"></i>&nbsp;&nbsp;&nbsp;slavoj@jeseniknadodrou.cz
-                </div>
-            </div>
-
-            <div class="copyright">
-                © 2021 TJ Slavoj Jeseník nad Odrou
-            </div>
-
-
+        <div class="customer-logos container">
+            <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image1.png"></div>
+            <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image2.png"></div>
+            <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image3.png"></div>
+            <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image4.png"></div>
+            <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image5.png"></div>
+            <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image6.png"></div>
+            <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image7.png"></div>
+            <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image8.png"></div>
         </div>
     </div>
+   <!-- bottom section -->
+   <div class="container-fluid bottom-section">
+    <div class="container bottom-nav">
+        <nav>
+            <ul>
+                <li>MUŽI</li>
+                <li>DOROST</li>
+                <li>ŽÁCI</li>
+                <li>PŘÍPRAVKA</li>
+                <li>KLUB</li>
+                <li>KONTAKT</li>
+            </ul>
+        </nav>
+
+        <div class="bottom-divider-line"></div>
+
+        <div class="social-sites">
+            <a href="https://www.facebook.com/TJ-Slavoj-Jesen%C3%ADk-nad-Odrou-111503132289346">
+                <i class="fa fa-facebook fa-3x" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.instagram.com/slavoj_cz/">
+                <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
+            </a>
+            <i class="fa fa-youtube fa-3x" aria-hidden="true"></i>
+            <i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
+        </div>
+
+        
+        <div class="comp-info">
+            <i class="fa fa-map-marker"></i> 
+            Jeseník nad Odrou 235, 742 33 Jeseník nad Odrou, Česká republika
+            &nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;<strong>IČ:</strong>000000
+            &nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;<strong>DIČ:</strong>000000
+        </div>
+        <div class="contact-info">
+            <div class="phone">
+                <i class="fa fa-phone"></i>&nbsp;&nbsp;&nbsp;+420 789 456 423
+            </div>
+            <div class="mail">
+                <i class="fa fa-envelope-o"></i>&nbsp;&nbsp;&nbsp;slavoj@jeseniknadodrou.cz
+            </div>
+        </div>
+
+        <div class="copyright">
+            © 2021 TJ Slavoj Jeseník nad Odrou
+        </div>
+
+
+</div>
+</div>
 
 </body>
 
