--- a/zaci.html
+++ b/zaci.html
@@ -23,11 +23,14 @@
     <!-- Function used to shrink nav bar removing paddings and adding black background -->
     <!-- Jquery needed -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
 
 </head>
 
-<body>
+<body style="background-color: #ebebeb;">
     <!-- Navigation bar -->
     <nav class="main-nav static affix">
         <div class="container">
@@ -457,9 +460,19 @@
 
     <!-- sponsors section -->
     <div class="sponsors">
-        <!-- remaining logos of sponsors -->
+        <div class="customer-logos container">
+            <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image1.png"></div>
+            <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image2.png"></div>
+            <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image3.png"></div>
+            <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image4.png"></div>
+            <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image5.png"></div>
+            <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image6.png"></div>
+            <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image7.png"></div>
+            <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image8.png"></div>
+        </div>
     </div>
-    <!-- bottom section -->
+
+
     <!-- bottom section -->
     <div class="container-fluid bottom-section">
         <div class="container bottom-nav">
@@ -478,18 +491,18 @@
 
             <div class="social-sites">
                 <a href="https://www.facebook.com/TJ-Slavoj-Jesen%C3%ADk-nad-Odrou-111503132289346">
-                    <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
+                    <i class="fa fa-facebook fa-3x" aria-hidden="true"></i>
                 </a>
                 <a href="https://www.instagram.com/slavoj_cz/">
-                    <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+                    <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
                 </a>
-                <i class="fa fa-youtube fa-2x" aria-hidden="true"></i>
-                <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+                <i class="fa fa-youtube fa-3x" aria-hidden="true"></i>
+                <i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
             </div>
 
-
+            
             <div class="comp-info">
-                <i class="fa fa-map-marker"></i>
+                <i class="fa fa-map-marker"></i> 
                 Jeseník nad Odrou 235, 742 33 Jeseník nad Odrou, Česká republika
                 &nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;<strong>IČ:</strong>000000
                 &nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;<strong>DIČ:</strong>000000
@@ -508,8 +521,10 @@
             </div>
 
 
-        </div>
     </div>
+    </div>
+
+
 
 </body>
 
