--- a/muzi.html
+++ b/muzi.html
@@ -39,7 +39,7 @@
     <nav class="main-nav static affix">
         <div class="container">
             <div class="logo">
-                <a class="navbar-brand" href="#"></a>
+                <a class="navbar-brand" href="index.html"></a>
             </div>
             <div id="mainListDiv" class="main_list">
                 <ul class="navlinks">
