updated contact section

--- a/kontakt.html
+++ b/kontakt.html
@@ -46,7 +46,9 @@
                     <li><a href="pripravka.html">PŘÍPRAVKA</a></li>
                     <li><a href="klub.html">KLUB</a></li>
                     <li class="active-page"><a href="kontakt.html">KONTAKT</a></li>
-                    <li><a href="https://www.jeseniknadodrou.cz/obcan/sluzby/ubytovani/turisticka-ubytovna-tj-slavoj-56cs.html">UBYTOVNA</a></li>
+                    <li><a
+                            href="https://www.jeseniknadodrou.cz/obcan/sluzby/ubytovani/turisticka-ubytovna-tj-slavoj-56cs.html">UBYTOVNA</a>
+                    </li>
 
                 </ul>
             </div>
@@ -58,24 +60,95 @@
         </div>
     </nav>
 
-    <div class="container-fluid teams-section-main-image">
-        <h2>DOROST</h2>
+
+    <div class="contact-content container">
+        <div class="next-matches-title">
+            <h2>KONTAKTY</h2>
+        </div>
+
+        <div class="flex-container">
+            <div class="flex-item-left">
+                <h3>Libor Macháč</h3>
+                <div class="contact-divider"></div>
+                <h4>Předseda</h4>
+                <h5 style="margin-top: 45px;"><i class="fa fa-phone" style="margin-right: 10px;"></i>606 635 654</h5>
+                <h5><i class="fa fa-envelope-o" style="margin-right: 10px;"></i>machac@jeseniknadodrou.cz</h5>
+            </div>
+            <div class="flex-item-right">
+                <h3>Petr Goláň</h3>
+                <div class="contact-divider"></div>
+                <h4>Místopředseda</h4>
+                <h5 style="margin-top: 45px;"><i class="fa fa-phone" style="margin-right: 10px;"></i>748 987 548</h5>
+                <h5><i class="fa fa-envelope-o" style="margin-right: 10px;"></i>petr.golan@seznam.cz</h5>
+            </div>
+        </div>
+
+        <div class="flex-container">
+            <div class="flex-item-left">
+                <h3>Petr Goláň</h3>
+                <div class="contact-divider"></div>
+                <h4>Místopředseda</h4>
+                <h5 style="margin-top: 45px;"><i class="fa fa-phone" style="margin-right: 10px;"></i>748 987 548</h5>
+                <h5><i class="fa fa-envelope-o" style="margin-right: 10px;"></i>petr.golan@seznam.cz</h5>
+            </div>
+            <div class="flex-item-right">
+                <h3>Petr Goláň</h3>
+                <div class="contact-divider"></div>
+                <h4>Místopředseda</h4>
+                <h5 style="margin-top: 45px;"><i class="fa fa-phone" style="margin-right: 10px;"></i>748 987 548</h5>
+                <h5><i class="fa fa-envelope-o" style="margin-right: 10px;"></i>petr.golan@seznam.cz</h5>
+            </div>
+        </div>
+
+        <div class="flex-container">
+            <div class="flex-item-left">
+                <h3>Petr Goláň</h3>
+                <div class="contact-divider"></div>
+                <h4>Místopředseda</h4>
+                <h5 style="margin-top: 45px;"><i class="fa fa-phone" style="margin-right: 10px;"></i>748 987 548</h5>
+                <h5><i class="fa fa-envelope-o" style="margin-right: 10px;"></i>petr.golan@seznam.cz</h5>
+            </div>
+            <div class="flex-item-right">
+                <h3>Petr Goláň</h3>
+                <div class="contact-divider"></div>
+                <h4>Místopředseda</h4>
+                <h5 style="margin-top: 45px;"><i class="fa fa-phone" style="margin-right: 10px;"></i>748 987 548</h5>
+                <h5><i class="fa fa-envelope-o" style="margin-right: 10px;"></i>petr.golan@seznam.cz</h5>
+            </div>
+        </div>
+
+        <div class="contact-form container">
+
+        </div>
     </div>
 
 
-    <div></div>
+
+    <!-- <div class="map-responsive">
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2585.0898212185093!2d17.90248825159963!3d49.61491127926761!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4713c000832b0fbd%3A0x89699a168457be6f!2sJesen%C3%ADk%20nad%20Odrou%20235%2C%20742%2033%20Jesen%C3%ADk%20nad%20Odrou!5e0!3m2!1scs!2scz!4v1633896116101!5m2!1scs!2scz" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        
+    </div> -->
 
     <!-- sponsors section -->
     <div class="sponsors">
         <div class="customer-logos container">
-            <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image1.png"></div>
-            <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image2.png"></div>
-            <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image3.png"></div>
-            <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image4.png"></div>
-            <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image5.png"></div>
-            <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image6.png"></div>
-            <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image7.png"></div>
-            <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image8.png"></div>
+            <div class="slide"><img
+                    src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image1.png"></div>
+            <div class="slide"><img
+                    src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image2.png"></div>
+            <div class="slide"><img
+                    src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image3.png"></div>
+            <div class="slide"><img
+                    src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image4.png"></div>
+            <div class="slide"><img
+                    src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image5.png"></div>
+            <div class="slide"><img
+                    src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image6.png"></div>
+            <div class="slide"><img
+                    src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image7.png"></div>
+            <div class="slide"><img
+                    src="https://raw.githubusercontent.com/solodev/infinite-carousel/master/images/image8.png"></div>
         </div>
     </div>
 
@@ -106,9 +179,9 @@
                 <i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
             </div>
 
-            
+
             <div class="comp-info">
-                <i class="fa fa-map-marker"></i> 
+                <i class="fa fa-map-marker"></i>
                 Jeseník nad Odrou 235, 742 33 Jeseník nad Odrou, Česká republika
                 &nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;<strong>IČ:</strong>000000
                 &nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;<strong>DIČ:</strong>000000
@@ -127,7 +200,7 @@
             </div>
 
 
-    </div>
+        </div>
     </div>
 
 </body>
